# Overseer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  functional.py  research.py
src/overseer/: __init__.py  cli.py
src/overseer/adapters/: __init__.py  anthropic.py  base.py  mock.py  openai.py
src/overseer/control/: __init__.py  api.py
src/overseer/core/: __init__.py  contracts.py  events.py  graph.py  runtime.py
src/overseer/nodes/: __init__.py  agent.py  base.py  function.py  verifier.py
src/overseer/persistence/: __init__.py  store.py
src/overseer/quality/: __init__.py  policies.py
src/overseer/ui/: __init__.py
src/overseer/ui/static/: app.js  index.html  style.css
tests/: conftest.py  test_adapters.py  test_decorators.py  test_graph.py  test_runtime.py  test_store.py  test_verifier.py
