[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overseer"
version = "0.1.0"
description = "Open-source framework for reliable multi-agent AI processes with quality control at every step."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Overseer Contributors" }]
keywords = ["llm", "agents", "ai", "workflow", "observability", "multi-agent", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
all = ["overseer[anthropic,openai]"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
overseer = "overseer.cli:cli"

[project.urls]
Homepage = "https://github.com/overseer/overseer"
Repository = "https://github.com/overseer/overseer"
Issues = "https://github.com/overseer/overseer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/overseer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/overseer",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "NOTES.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "N", "C4", "PT"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
