[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overseer-ai"
version = "0.1.0"
description = "Reliable multi-agent AI processes with built-in quality control, snapshots, and a live UI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nikita Vivat", email = "nikitavivat@proton.me" }]
keywords = ["llm", "agents", "ai", "multi-agent", "observability", "quality", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
all = ["overseer-ai[anthropic,openai]"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.2",
    "twine>=5.1",
]

[project.scripts]
overseer = "overseer.cli:cli"

[project.urls]
Homepage = "https://github.com/nikitavivat/Overseer"
Repository = "https://github.com/nikitavivat/Overseer"
Issues = "https://github.com/nikitavivat/Overseer/issues"
Changelog = "https://github.com/nikitavivat/Overseer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/overseer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/overseer",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "NOTES.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "N", "C4", "PT"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
